# birdview

./: CMakeLists.txt
imr/: custom_map.c  imr_main.c  osaldrv_helper.c  settings_v3h2.c
imr/include/: custom_map.h  imrlxsample_syn.h  osaldrv_helper.h  reg_settings.h
include/: common.h  customize.h
src/: main.c
vin/: vin_capture.c
vin/include/: v4l2_videocap_tpparam.h  vin_capture.h
vout/: buffers.c  format.c  kms.c  vout_main.c
vout/include/: buffers.h  drm.h  drm_fourcc.h  drm_mode.h  libdrm_macros.h  vout_main.h  xf86drm.h
vout/include/util/: format.h  kms.h
